--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 
     <!-- Theme -->
     <meta name="theme-color" content="#000000" />
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1V3HPM2NHG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1V3HPM2NHG');
+    </script>
   </head>
   <body>
     <div id="root"></div>
