fix: Correct GA4 Measurement ID (G-1HDXWLWY77)

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <!-- Theme -->
     <meta name="theme-color" content="#000000" />
 
-    <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1V3HPM2NHG"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1HDXWLWY77"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-1V3HPM2NHG');
+      gtag('config', 'G-1HDXWLWY77');
     </script>
   </head>
   <body>
